--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "**/*": "prettier --write --ignore-unknown"
   },
   "dependencies": {
+    "@testing-library/jest-dom": "^6.2.0",
     "ag-grid-community": "^31.0.0",
     "ag-grid-react": "^31.0.0",
     "react": "^18.2.0",
@@ -23,7 +24,6 @@
     "react-router-dom": "^6.20.1"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^6.1.5",
     "@testing-library/react": "^14.1.2",
     "@testing-library/user-event": "^14.5.1",
     "@types/jest": "^29.5.11",
@@ -39,6 +39,7 @@
     "husky": "^8.0.3",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "jest-fetch-mock": "^3.0.3",
     "lint-staged": "^15.2.0",
     "prettier": "3.1.0",
     "sass": "^1.69.5",
